deployment.yml
apiVersion: v1
kind: Deployment
metadata: 
  name: apache-deployment
spec: 
  replicas: 3
  selectors:
    matchlabels: 
      app: apache
  template: 
    metadata: 
      labels: 
        apps: apache
    specs:
      containers:
      - name: apache-container
        image: httpd:latest
        ports: 
        - containerPort: 80
